table z-index fix sticky on Jquery = calc fix

--- a/public/carhouse/css/app.css
+++ b/public/carhouse/css/app.css
@@ -733,8 +733,6 @@ img {
     -webkit-box-flex: 11;
         -ms-flex-positive: 11;
             flex-grow: 11;
-    position: relative;
-    z-index: -1;
 }
 
 /** MAIN-NAV**/
@@ -2231,7 +2229,10 @@ footer .footer-item .gallery-item {
     -webkit-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
     will-change: position, transform;
+}
 
+.inner-wrapper-sticky{
+    z-index: 10;
 }
 
 
