--- a/resources/assets/carhouse/css/style.css
+++ b/resources/assets/carhouse/css/style.css
@@ -30,8 +30,6 @@ img {
 .content{
     flex-basis: 682px;
     flex-grow: 11;
-    position: relative;
-    z-index: -1;
 }
 
 /** MAIN-NAV**/
@@ -1471,7 +1469,10 @@ footer .footer-item .gallery-item {
     transform: translate(0, 0); /* For browsers don't support translate3d. */
     transform: translate3d(0, 0, 0);
     will-change: position, transform;
+}
 
+.inner-wrapper-sticky{
+    z-index: 10;
 }
 
 
